--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.9.11",
+    "@rainbow-me/rainbowkit": "^0.12.5",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
@@ -22,6 +23,7 @@
     "@types/react": "^18.0.15",
     "@types/redux-logger": "^3.0.9",
     "axios": "^1.3.4",
+    "ethers": "^5",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +37,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
+    "wagmi": "^0.12.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
